fix: cambiato colori per rendere visibili i numeri

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,8 @@ main {
   cursor: pointer;
 }
 
-.dark-blue{
-    background-color: darkblue;
+.light-blue{
+    background-color: lightskyblue;
 }
 
 .dark-red{
